--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
           <hr>
           <div class="footer-copyright text-center py-3" align="center">
             <small class="text-muted" style="color: white !important">MADE WITH <i class="bi bi-heart"
-                style="color:red !important"></i> BY <b>IGNOR3DH4X0R</b></small>
+                style="color:red !important"></i> BY <b>SowmikSudo</b></small>
             <br><br>
             <button class="btn btn-outline-primary"
-              onclick="document.location='https://ign0r3dh4x0r.github.io/linktree.html'">
+              onclick="document.location='https://t.me/ign0r3dh4x0r'">
               <i class="bi bi-tree"></i>
               LINKTREE
             </button>
             <span style="color: white;"> | </span>
-            <button class="btn btn-outline-primary" onclick="document.location='https://github.com/Ign0r3dh4x0r'">
+            <button class="btn btn-outline-primary" onclick="document.location='https://github.com/sowmiksudo'">
               <i class="bi bi-github"></i>
               GITHUB
             </button>
